--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.10",
     "sweet-alert": "^2.0.5",
     "sweetalert2": "^11.7.3"
   },
